some alignment fixes

--- a/public/css/front/app.css
+++ b/public/css/front/app.css
@@ -14077,8 +14077,39 @@ input[type=number]::-webkit-outer-spin-button {
   border-radius: 100%;
   vertical-align: middle;
   overflow: hidden;
-  background-color: #B2B2B2;
+  background-size: cover;
+  background-color: transparent;
   margin-left: 3px;
+  position: relative;
+  border: 1px solid #E0E0E0;
+}
+
+.user-img.no-image {
+  position: relative;
+}
+
+.user-img.no-image:after {
+  content: "\E90F";
+  font-family: 'icomoon';
+  left: 0;
+  right: 0;
+  display: block;
+  margin: auto;
+  color: #7d7d7d;
+  position: absolute;
+  top: -2px;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .notification-block {
